[gd_scene load_steps=4 format=3 uid="uid://dtjpcnacdl0pk"]

[ext_resource type="Script" uid="uid://bpcahprru7lnj" path="res://scenes/game_scenes/movie_person_pair.gd" id="1_ebygj"]
[ext_resource type="PackedScene" uid="uid://cewg41etai1yf" path="res://scenes/game_scenes/pair_entry.tscn" id="2_pro1x"]

[sub_resource type="Theme" id="Theme_pro1x"]

[node name="MoviePersonPair" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_pro1x")
script = ExtResource("1_ebygj")

[node name="PairMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="HBoxContainer" parent="PairMarginContainer"]
layout_mode = 2

[node name="MoviePairEntry" parent="PairMarginContainer/VBoxContainer" instance=ExtResource("2_pro1x")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="PersonPairEntry" parent="PairMarginContainer/VBoxContainer" instance=ExtResource("2_pro1x")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
